--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,12 +5,14 @@
 
 html {
     box-sizing: border-box;
+    max-width: 100%;
     height: 100%;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     font-size: 1em;
     line-height: 1.4;
     color: #222;
+    overflow-x: hidden;
 }
 
 html *,
@@ -229,11 +231,11 @@ h2 {
     top: -50px;
     width: 50%;
     z-index: 2;
-    padding: 0 20px;
+    padding: 1px 20px 0;
 }
 
 .hero-cta-left .hero-info h1 {
-    margin: -11px -50px 17px 0;
+    margin: -11px -50px 24px 0;
     padding-left: 50px;
 }
 
@@ -245,7 +247,7 @@ h2 {
 
 .hero-cta-left .hero-form {
     max-width: 470px;
-    margin: 50px 100px 19px 50px; 
+    margin: 50px 100px 15px 50px; 
     overflow: auto;
 }
 
@@ -334,10 +336,11 @@ h2 {
     }
     
     .hero-cta-left .hero-info h1 {
+        margin-bottom: 22px;
         padding-left: 0;
         font-size: 36px;
-        line-height: 46.8px;
-        letter-spacing: -.54px;
+        line-height: 1.3;
+        letter-spacing: -0.015em;
     }
     
     .hero-cta-left .hero-info h2 {
@@ -403,6 +406,10 @@ h2 {
         display: none;
     }
     
+    .hero-cta-left .hero-content {
+        margin-top: 1px;
+    }
+    
     .hero-cta-left .hero-info {
         float: none;
         width: 100%;
@@ -413,12 +420,15 @@ h2 {
     }
     
     .hero-cta-left .hero-info h1 {
+        margin-right: -40px;
+        margin-bottom: 21px;
         font-size: 34px;
     }
     
     .hero-cta-left .hero-info h2 {
         margin-top: 20.75px;
         max-width: 600px;
+        margin-bottom: 30px;
         font-size: 25px;
         line-height: 35px;
         letter-spacing: -.375px;
@@ -429,6 +439,11 @@ h2 {
         text-align: center;
         margin-left: auto;
     }
+    
+    .hero-cta-left .below-form {
+        padding-left: 5px;
+    }
+    
     
     .hero-cta-left .hero-image {
         width: 100%;
@@ -443,9 +458,10 @@ h2 {
     }
     
     .hero-cta-left .hero-image {
-        padding-top: 40px;
+        padding-top: 80px;
     }
 }
+
 
 @media (max-width: 480px) {
     
@@ -465,6 +481,7 @@ h2 {
     
     .hero-cta-left .hero-info h1 {
         margin: 0;
+        margin-left: 10px;
         font-size: 30px;
     }
     
@@ -500,7 +517,7 @@ h2 {
     position: relative;
     clear: both;
     text-align: center;
-    margin-bottom: 80px;
+    margin-bottom: -5px;
 }
 
 .image-with-background .image-background {
@@ -522,6 +539,7 @@ h2 {
     position: relative;
     width: 58.33333%;
     max-width: 539px;
+    margin-right: 1px;
     padding: 0 20px;
 }
 
@@ -660,7 +678,7 @@ h2 {
 
 @media (max-width: 1024px) {
     .three-svg {
-        padding: 90px 20px;
+        padding: 30px 20px 90px;
     }
 }
 
@@ -668,7 +686,7 @@ h2 {
 @media (max-width: 767px) {
     
     .three-svg {
-        padding: 70px 20px;
+        padding: 50px 20px 70px;
     }
     
     .three-svg h3 {
@@ -678,6 +696,10 @@ h2 {
 
 
 @media (max-width: 480px) {
+    
+    .three-svg {
+        padding: 70px 20px 70px;
+    }
     
     .three-svg h3 {
         font-size: 20px;
@@ -716,7 +738,7 @@ h2 {
 
 .products-section .headline-container {
     max-width: 1200px;
-    margin: 0 auto 60px;
+    margin: 0 auto 90px;
     padding: 0 20px;
     text-align: center;
 }
@@ -733,10 +755,11 @@ h2 {
     line-height: 1.5;
     letter-spacing: -0.01em;
     text-align: center;
+    color: #637280;
 }
 
 .products-section .product-container {
-    margin-bottom: 130px;
+    margin-bottom: 120px;
 }
 
 .products-section .product-container .product-image,
@@ -760,6 +783,8 @@ h2 {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+    margin-left: -20px;
+    margin-right: -20px;
 }
 
 .products-section .product-container .product-description {
@@ -769,7 +794,7 @@ h2 {
     padding: 0 20px;
 }
 
-.products-section .product-container .product-right .product-description {
+.products-section .product-container.product-right .product-description {
     -webkit-box-ordinal-group: 3;
     -webkit-order: 2;
     -ms-flex-order: 2;
@@ -834,7 +859,7 @@ h2 {
     display: inline-block;
     position: relative;
     left: 5px;
-    margin-left: 5px;
+    margin-left: 2px;
     border: 5px transparent solid;
     border-left-color: white;
     border-left-width: 7px;
@@ -996,6 +1021,17 @@ h2 {
 
 /********* PRODUCT MEDIA QUERIES **********/
 
+
+@media (min-width: 1800px) {
+    .products-section .product-container.product-left .product-image,
+    .products-section .product-container.product-left .product-image-hover {
+        left: 45% !important;
+        width: 55% !important;
+    }
+}
+
+
+
 @media (max-width: 1024px) {
     
     .products-section {
@@ -1009,6 +1045,10 @@ h2 {
     
     .products-section .product-container .product-description h2 {
         font-size: 36px;
+    }
+    
+    .products-section .product-cta {
+        padding-top: 90px;
     }
     
     .products-section .product-cta .text-container h2 {
@@ -1083,7 +1123,7 @@ h2 {
         max-width: calc(100% + 20px);
     }
     
-    .products-section .product-container .product-right .mobile-content img {
+    .products-section .product-container.product-right .mobile-content img {
         margin-right: 0;
         margin-left: -20px;
     }
@@ -1096,10 +1136,6 @@ h2 {
         display: none;
     }
     
-    .products-section .product-cta {
-        padding-top: 50px;
-    }
-    
     .products-section .product-cta .flex-container {
         display: block;
     }
@@ -1107,7 +1143,7 @@ h2 {
     .products-section .product-cta .text-container {
         width: 100%;
         max-width: 500px;
-        margin: 0 auto 40px;
+        margin: 0 auto 56px;
         float: none;
         text-align: center;
     }
@@ -1156,17 +1192,13 @@ h2 {
         margin-right: -25%;
     }
     
-    .products-section .product-container .product-right .mobile-content img {
+    .products-section .product-container.product-right .mobile-content img {
         margin-right: 0;
         margin-left: -25%;
     }
     
-    .products-section .product-cta {
-        padding-top: 40px;
-    }
-    
     .products-section .product-cta .text-container {
-        margin-bottom: 30px;
+        margin-bottom: 45px;
     }
     
     .products-section .product-cta .text-container h2 {
@@ -1399,6 +1431,10 @@ h2 {
     .highlight .text-container p {
         font-size: 17px;
     }
+    
+    .highlight .image-container img {
+        max-width: 317px;
+    }
 }
 
 
@@ -1433,7 +1469,7 @@ h2 {
     margin-top: 100px;
     height: 1050px;
     background-image: url('../images/footer/bg-2-xlg.jpg');
-    background-size: 1400px 100%;
+    background-size: 2450px 100%;
 }
 
 .page-bottom-cta .content-container {
